--- a/Project.toml
+++ b/Project.toml
@@ -3,5 +3,10 @@ uuid = "115453b3-6f51-4751-aee0-5e49c5380674"
 authors = ["ruttejan"]
 version = "1.0.0-DEV"
 
+[deps]
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
+
 [compat]
 julia = "1.7"
